fix: added z-index to tooltip

--- a/src/components/tooltip/tooltip.module.scss
+++ b/src/components/tooltip/tooltip.module.scss
@@ -15,6 +15,7 @@
 
 .tooltip {
   position: absolute;
+  z-index: 2;
 
   display: none;
   width: max-content;
